--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -692,6 +692,7 @@ this should be useful later
 ** VTerm
 #+begin_src emacs-lisp
   (use-package vterm
+    :bind ("C-`" . vterm)
     :commands vterm
     :config
     (setq vterm-max-scrollback 10000))
