--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -211,17 +211,17 @@ kept-old-versions 5)
   ;;   :config
   ;;   (load-theme 'ef-dark t))
 
-  ;; (use-package kanagawa-themes
-  ;; :config
-  ;; (load-theme 'kanagawa-dragon t))
+   (use-package kanagawa-themes
+   :config
+   (load-theme 'kanagawa-dragon t))
 
   ;; (use-package klere-theme
   ;;   :config
   ;;   (load-theme 'klere t))
 
-  (use-package kaolin-themes
-    :config
-    (load-theme 'kaolin-shiva t))
+;;  (use-package kaolin-themes
+  ;;  :config
+    ;; (load-theme 'kaolin-shiva t))
 
   ;; emacsclient things
   (setq frame-resize-pixelwise t)
