--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1085,6 +1085,7 @@ the feds are watching
     (setq elcord-display-buffer-details nil)
     (setq elcord-use-major-mode-as-main-icon t)
     (setq elcord-quiet t)
+    (setq elcord-display-elapsed nil)
     :config
     (elcord-mode))
 #+end_src
