--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1087,27 +1087,24 @@ the feds are watching
     (setq elcord-quiet t)
     (setq elcord-display-elapsed nil)
     :config
-    (elcord-mode))
+    (defun elcord--disable-elcord-if-no-frames (f)
+      (ignore f)
+      (when (let ((frames (delete f (visible-frame-list))))
+  	    (or (null frames)
+  		(elcord-mode -1)))))
 
-  (defun elcord--disable-elcord-if-no-frames (f)
-    (declare (ignore f))
-    (when (let ((frames (delete f (visible-frame-list))))
-            (or (null frames)
-                (and (null (cdr frames))
-                     (eq (car frames) terminal-frame))))
-      (elcord-mode -1)
-      (add-hook 'after-make-frame-functions 'elcord--enable-on-frame-created)))
+    (defun elcord--enable-on-frame-created (f)
+      (elcord-mode +1))
 
-  (defun elcord--enable-on-frame-created (f)
-    (declare (ignore f))
-    (elcord-mode +1))
+    (add-hook 'after-make-frame-functions 'elcord--enable-on-frame-created)
 
-  (defun sakomacs/elcord-mode-hook ()
-    (if elcord-mode
-        (add-hook 'delete-frame-functions 'elcord--disable-elcord-if-no-frames)
-      (remove-hook 'delete-frame-functions 'elcord--disable-elcord-if-no-frames)))
-
-  (add-hook 'elcord-mode-hook 'sakomacs/elcord-mode-hook)
+    (defun sakomacs/elcord-mode-hook ()
+      (if elcord-mode
+  	(add-hook 'delete-frame-functions 'elcord--disable-elcord-if-no-frames)
+        (remove-hook 'delete-frame-functions 'elcord--disable-elcord-if-no-frames)))
+    (elcord-mode)
+    (add-hook 'elcord-mode-hook 'sakomacs/elcord-mode-hook)
+    )
 #+end_src
 ** Telegram
 does NOT WORK ON WINDOWS
